--- a/package/PKGBUILD-src.tmpl
+++ b/package/PKGBUILD-src.tmpl
@@ -8,7 +8,7 @@ url="https://github.com/mingue/journal-viewer"
 license=('GPL3')
 depends=(
     'systemd'
-    'webkit2gtk'
+    'webkit2gtk-4.1'
 )
 makedepends=(
     'base-devel'
